--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kertz/twitteroauth",
+    "name": "ddarthp/twitteroauth",
     "require": {
         "php": ">=5.3.0",
         "ext-curl": "*"
