--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "ext-curl": "*"
     },
-        "autoload": {
+    "autoload": {
         "classmap": ["twitteroauth"]
     }
 }
+
